crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.bug-invariant-local-or-context-references/error.txt
Found 1 error:

Invariant: Expected all references to a variable to be consistently local or context references

Identifier <unknown> err$7 is referenced as a context variable, but was previously referenced as a local variable.

error.bug-invariant-local-or-context-references.ts:15:13
  13 |     setState(_prevState => ({
  14 |       loading: false,
> 15 |       error: err,
     |              ^^^ this is local
  16 |     }));
  17 |   }
  18 | };
